# simple_streamlit_app

./: .pre-commit-config.yaml  Makefile  main.py  pyproject.toml
simple_streamlit_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
